# press

./: .coverage  .gitignore  .pre-commit-config.yaml  .pymarkdown.json  .yamllint  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  action.yml  pyproject.toml  requirements-lock.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  defect.yml  documentation.yml  proposal.yml
.github/workflows/: build.yml  codeql.yml  dependency-review.yml  docs-site.yml  integration.yml  release-contract.yml  repo-metadata.yml  roadmap.yml  security-controls.yml  selftest.yml  toolchain.yml
docs/: ARCHITECTURE.md  BOOK-PARTS.md  COMPATIBILITY.md  CONFIGURATION.md  COVER-STYLES.md  DESK.md  DIRECT-ORDERING-PLAN.md  EXTENSION-CONTRACT.md  GALLERY.md  ILLUSTRATIONS.md  INSTALL.md  INVARIANTS.md  LULU.md  META-FRAMEWORK-EXTRACTION.md  MIGRATION.md  PRINT-FORMATS.md  PRINT-ORDERING.md  PRINT-PROFILES-PLAN.md  PROVIDER-QUALIFICATION.md  QUICKSTART.md  REFERENCE.md  TUI-PLAN.md
examples/field-days-almanac/book/appendices/: z-about-the-author.md
examples/field-days-almanac/book/chapters/: 01-spring.md  02-summer.md  03-autumn.md  04-winter.md
examples/field-days-almanac/config/: aesthetic.yaml  metadata.yaml
examples/hearthstone-cookbook/book/appendices/: z-about-the-author.md
examples/hearthstone-cookbook/book/chapters/: 00-a-note-on-the-kitchen.md  01-soups-and-stocks.md  02-bread.md
examples/hearthstone-cookbook/config/: aesthetic.yaml  front-matter.yaml  index-terms.yaml  metadata.yaml
examples/on-the-commons-monograph/book/appendices/: a-about-the-author.md
examples/on-the-commons-monograph/book/chapters/: 00-introduction.md  01-graduated-sanction.md
examples/on-the-commons-monograph/config/: aesthetic.yaml  front-matter.yaml  metadata.yaml
examples/signal-and-noise-manual/book/appendices/: x-glossary.md  z-about-the-author.md
examples/signal-and-noise-manual/book/chapters/: 01-the-receiver.md  02-tuning.md  03-field-repair.md
examples/signal-and-noise-manual/config/: aesthetic.yaml  house-rules.yaml  index-terms.yaml  metadata.yaml
examples/small-hours-chapbook/assets/web/: extra.css
examples/small-hours-chapbook/book/appendices/: z-about-the-author.md
examples/small-hours-chapbook/book/chapters/: 00-nocturnes.md  01-streetlights.md
examples/small-hours-chapbook/config/: aesthetic.yaml  front-matter.yaml  metadata.yaml
examples/the-long-field-essays/book/appendices/: y-also-by.md  z-about-the-author.md
examples/the-long-field-essays/book/chapters/: 01-the-long-field.md  02-the-argument-for-staying.md
examples/the-long-field-essays/config/: aesthetic.yaml  front-matter.yaml  metadata.yaml
examples/the-tinsmith-novella/book/appendices/: a-also-by.md  z-about-the-author.md
examples/the-tinsmith-novella/book/chapters/: 00-the-shop.md  01-solder.md
examples/the-tinsmith-novella/config/: aesthetic.yaml  front-matter.yaml  house-rules.yaml  metadata.yaml
examples/tidepool-field-notes/book/appendices/: z-about-the-author.md
examples/tidepool-field-notes/book/chapters/: 00-preface.md  01-splash-zone.md  02-barnacle-zone.md  03-the-mussel-bed.md
examples/tidepool-field-notes/config/: aesthetic.yaml  metadata.yaml
quality/: coverage-baseline.json  fixtures.yaml  invariants.yaml  mutation-baseline.json  providers.yaml  scenarios.yaml  surfaces.yaml
roadmap/: milestones.json
scripts/: build_examples.py  build_site.py  check_layout.py  commission_covers.py  coverage_ratchet.py  gauntlet-steps.sh  gauntlet.sh  gen_cover.py  lock-deps.sh  mutation_ratchet.py  release.sh  sync_roadmap.py  toolchain_smoke.sh  verify.sh
site/: DESIGN.md  copy.js  landing.md  press.css
site/brand/: README.md
skills/: onwritingwell.md  press-logomark.md
skills/overused-jargon/: SOURCENOTE.md
skills/overused-jargon/scripts/: discover_jargon.py  jargon_lint.py
src/press/: __init__.py  __main__.py  add.py  aesthetic.py  art.py  art_commission.py  artifact_status.py  barcode.py  booklib.py  bookmodel.py  brand.py  build.py  catalog.py  check_source.py  check_the_checkers.py  commerce.py  config_cli.py  config_schema.py  config_store.py  cover.py  desk_model.py  doctor.py  dropcaps.py  edition.py  events.py  extensions.py  fixture_provenance.py  gen_authorities.py  gen_coverwrap.py  gen_front_matter.py  gen_index.py  illustrate.py  impact.py  instruments.py  invariants.py  jargon_lint.py  migrate.py  onix.py  operator.py  package_source.py  (+24 more)
src/press/adapters/: __init__.py  fakes.py  http.py  production.py  protocols.py  retry.py
src/press/data/: aesthetic-house.yaml  cover-styles.yaml  illustration-styles.yaml  providers.yaml
src/press/data/defaults/: chunked.yaml  epub.yaml  html.yaml  pdf.yaml  print.yaml  (+1 more)
src/press/desk/: __init__.py  app.py  wizard.py
src/press/providers/: __init__.py  contract.py  fake.py  lulu.py  transport.py
tests/: conftest.py  damage.py  factories.py  pytest_invariants.py  test_adapters.py  test_adapters_boundary.py  test_adapters_routing.py  test_add.py  test_artifact_status.py  test_asyncio_scope.py  test_barcode.py  test_brand.py  test_catalog.py  test_check_layout.py  test_ci_posture.py  test_cli_help.py  test_collection_plugin.py  test_commerce.py  test_config_cli.py  test_config_schema.py  test_config_shapes.py  test_config_store.py  test_cover.py  test_coverage_ratchet.py  test_coverwrap_layout.py  test_damage.py  test_desk_app.py  test_desk_model.py  test_desk_polish.py  test_desk_run.py  test_desk_wizard.py  test_distribution.py  test_doctor_findings.py  test_dropcaps.py  test_dropcaps_filter.py  test_edition.py  test_events.py  test_examples.py  test_extensions.py  test_factories.py  (+42 more)
tests/fuzz/: generate_corpus.py
tests/integration/: _harness.py  test_archives_family.py  test_coverwrap_family.py  test_epub_family.py  test_markdown_family.py  test_pdf_family.py  test_web_family.py
tests/layout/: bad-sidebar.html  good-sidebar.html
tests/visual/: baseline-v1.json
(+77 files in other folders)
