[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "press"
version = "1.11.0"
description = "Book production pipeline: pandoc/LuaLaTeX builds, editorial checks, and artifact verification"
readme = "README.md"
authors = [
    {name = "Clint Ecker", email = "clint@lgtm.systems"},
]
maintainers = [
    {name = "LGTM Systems, LLC", email = "clint@lgtm.systems"},
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Other Audience",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup",
]
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "Pillow>=10.0",
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
    "pre-commit>=3.5",
    "build>=1.0",
    "twine>=5.0",
    "pytest>=8.0",
    "hypothesis>=6.100",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# The suite proves the press against real scaffolded books; a run that
# collected nothing is a mistake, not a pass.
python_files = ["test_*.py"]
markers = [
    "invariant: the ledger id this test proves (INV-...)",
    "layer: the test layer (unit, property, selftest, integration)",
    "proof: proof polarity (positive or negative)",
]

[project.scripts]
press = "press.__main__:console"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
press = ["data/**/*"]

[project.urls]
Repository = "https://github.com/clintecker/press"
Issues = "https://github.com/clintecker/press/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
# The complexity gate is law for new code; the survivors above it are
# inventoried with noqa: C901 and tracked for burn-down.
max-complexity = 15

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
