[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "press"
version = "1.17.0"
description = "Book production pipeline: pandoc/LuaLaTeX builds, editorial checks, and artifact verification"
readme = "README.md"
authors = [
    {name = "Clint Ecker", email = "clint@lgtm.systems"},
]
maintainers = [
    {name = "LGTM Systems, LLC", email = "clint@lgtm.systems"},
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Other Audience",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup",
]
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0",
    "pypdf>=4.0",
    # ruamel.yaml is the package's one YAML library (see press.yamlio): it
    # reads and writes at YAML 1.2 so a bare no/yes/on is always a string,
    # and its round-trip mode lets `press config` edit a book's YAML in
    # place without discarding the template's comments or a user's additions.
    "ruamel.yaml>=0.18",
]

[project.optional-dependencies]
# The operator desk is optional: a bare install builds books from the
# command line without Textual, and `press desk` asks for this extra.
tui = [
    "textual>=8,<9",
]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.5",
    "build>=1.0",
    "twine>=5.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "textual>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
# Function scope matches the suite's test-isolation law: each async test
# gets its own event loop, so no task, timer, or loop-bound fixture outlives
# the test that created it. Set explicitly so the behavior does not drift
# with pytest-asyncio's changing default (#169).
asyncio_default_fixture_loop_scope = "function"
# The suite proves the press against real scaffolded books; a run that
# collected nothing is a mistake, not a pass.
python_files = ["test_*.py"]
filterwarnings = [
    # A press-owned call site that reintroduces Pillow's deprecated pixel
    # access fails the suite rather than warning until Pillow 14 removes it
    # (#167). Third-party deprecations stay visible but non-fatal.
    "error:.*getdata.* is deprecated:DeprecationWarning:press.*",
]
markers = [
    "invariant: the ledger id this test proves (INV-...)",
    "layer: the test layer (unit, property, selftest, integration)",
    "proof: proof polarity (positive or negative)",
]

[project.scripts]
press = "press.__main__:console"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
press = ["data/**/*"]

[tool.setuptools.exclude-package-data]
# The data glob is broad on purpose (it ships the house design, skills,
# and templates), so bytecode and cache from running the packaged
# scripts locally must be excluded explicitly, or the wheel's contents
# would depend on prior local execution and the interpreter version.
press = ["**/__pycache__/**", "**/*.pyc", "**/*.pyo", "**/.DS_Store", "**/*.swp"]

[project.urls]
Repository = "https://github.com/clintecker/press"
Issues = "https://github.com/clintecker/press/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
# The complexity gate is law for new code; the survivors above it are
# inventoried with noqa: C901 and tracked for burn-down.
max-complexity = 15

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
